Feature/work (#14)
* gradle setting

* 去除冗余的模块

* mongodb example